--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,102 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: #f2f2f2;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+  padding: 5px;
+}
+
+.column-45 {
+  flex: 45%;
+}
+
+.column-80 {
+  flex: 80%;
+}
+
+.column-20 {
+  flex: 20%;
+}
+
+.column-30 {
+  flex: 30%;
+}
+
+.column-70 {
+  flex: 70%;
+}
+
+.column-10 {
+  flex: 10%;
+}
+
+input[type="text"], input[type="date"], textarea , select {
+  width: 100%;
+  font-size: 1rem;
+  color: #495057;
+  background: #ffffff;
+  padding: 0.75rem 0.75rem;
+  border: 1px solid #ced4da;
+  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+  border-radius: 6px;
+
+  &[type="text"]{
+    appearance: none;
+  }
+
+  &.invalid {
+    border: 1px solid red;
+    background-color: #fefefe;
+    outline: red;
+
+    &:active {
+      border: 1px solid red;
+    }
+  }
+}
+
+.invalid-text {
+  color: red;
+  font-style: italic;
+}
+
+
+.text-end {
+  text-align: right;
+}
+
+.mt-5 {
+  margin-bottom: 20px;
+}
+
+a {
+  cursor: pointer;
+}
+
+button {
+   color: #ffffff;
+    background: #3B82F6;
+    border: 1px solid #3B82F6;
+    padding: 0.75rem 1.25rem;
+    font-size: 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+
+    &.secondary {
+      background-color: #6474A0;
+      border: 1px solid #64748B;;
+    }
+}
